edit first time

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "html",
+  "name": "LixinDigital",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -110,6 +110,26 @@
     {
       "path": "pug/index.pug",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "js/index.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+    },
+    {
+      "path": "css/self.css",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "sass/self.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
+    },
+    {
+      "path": "js/vendor/carousel.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+    },
+    {
+      "path": "js/carousel.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     }
   ],
   "fileTree": {
@@ -117,7 +137,8 @@
       "jade/include",
       "mobile/asset",
       "pug/include",
-      "sass"
+      "js",
+      "js/vendor"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -144,9 +165,14 @@
       ]
     },
     {
-      "path": "sass/_menubox.scss",
+      "path": "pug/work.pug",
       "imports": [
-        "sass/_media.scss"
+        "pug/include/layout.pug",
+        "pug/include/mixin.pug",
+        "pug/include/head.pug",
+        "pug/include/trans.pug",
+        "pug/include/bur.pug",
+        "pug/include/menubox.pug"
       ]
     },
     {
@@ -186,19 +212,20 @@
       ]
     },
     {
-      "path": "pug/include/layout.pug",
+      "path": "sass/_map.scss",
       "imports": [
-        "pug/include/head.pug",
-        "pug/include/trans.pug",
-        "pug/include/bur.pug",
-        "pug/include/menubox.pug"
+        "sass/_color.scss"
       ]
     },
     {
-      "path": "pug/work.pug",
+      "path": "sass/_menubox.scss",
       "imports": [
-        "pug/include/layout.pug",
-        "pug/include/mixin.pug",
+        "sass/_media.scss"
+      ]
+    },
+    {
+      "path": "pug/include/layout.pug",
+      "imports": [
         "pug/include/head.pug",
         "pug/include/trans.pug",
         "pug/include/bur.pug",
@@ -207,7 +234,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
