--- a/prepros-6.config
+++ b/prepros-6.config
@@ -188,6 +188,7 @@
         "sass/_function.scss",
         "sass/_partials.scss",
         "sass/_z-index.scss",
+        "sass/_loading.scss",
         "sass/_trans.scss",
         "sass/_layout.scss",
         "sass/_form.scss",
@@ -208,7 +209,8 @@
         "sass/_client.scss",
         "sass/_contact.scss",
         "sass/_map.scss",
-        "sass/_work.scss"
+        "sass/_work.scss",
+        "sass/_android.scss"
       ]
     },
     {
