--- a/prepros-6.config
+++ b/prepros-6.config
@@ -113,7 +113,7 @@
     },
     {
       "path": "js/index.js",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"js/index.bundle.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     },
     {
       "path": "css/self.css",
@@ -129,7 +129,7 @@
     },
     {
       "path": "js/carousel.js",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"vendor/carousel.min.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     }
   ],
   "fileTree": {
@@ -152,6 +152,36 @@
     "hideUnwatchedFiles": false
   },
   "imports": [
+    {
+      "path": "pug/index.pug",
+      "imports": [
+        "pug/include/layout.pug",
+        "pug/include/mixin.pug",
+        "pug/include/head.pug",
+        "pug/include/trans.pug",
+        "pug/include/bur.pug",
+        "pug/include/menubox.pug"
+      ]
+    },
+    {
+      "path": "pug/work.pug",
+      "imports": [
+        "pug/include/layout.pug",
+        "pug/include/mixin.pug",
+        "pug/include/head.pug",
+        "pug/include/trans.pug",
+        "pug/include/bur.pug",
+        "pug/include/menubox.pug"
+      ]
+    },
+    {
+      "path": "sass/self.scss",
+      "imports": [
+        "css/slick.min.css",
+        "css/slick-theme.min.css",
+        "css/jquery.fancybox.min.css"
+      ]
+    },
     {
       "path": "sass/style.scss",
       "imports": [
@@ -188,6 +218,27 @@
         "sass/_map.scss",
         "sass/_work.scss",
         "sass/_android.scss"
+      ]
+    },
+    {
+      "path": "sass/_map.scss",
+      "imports": [
+        "sass/_color.scss"
+      ]
+    },
+    {
+      "path": "sass/_menubox.scss",
+      "imports": [
+        "sass/_media.scss"
+      ]
+    },
+    {
+      "path": "pug/include/layout.pug",
+      "imports": [
+        "pug/include/head.pug",
+        "pug/include/trans.pug",
+        "pug/include/bur.pug",
+        "pug/include/menubox.pug"
       ]
     }
   ],
