--- a/prepros-6.config
+++ b/prepros-6.config
@@ -113,7 +113,7 @@
     },
     {
       "path": "js/index.js",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"js/index.bundle.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"js/index.bundle.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":false},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     },
     {
       "path": "css/self.css",
@@ -400,7 +400,7 @@
       "unsafe_math": false,
       "unsafe_proto": false,
       "unsafe_regexp": false,
-      "conditionals": true,
+      "conditionals": false,
       "comparisons": true,
       "evaluate": true,
       "booleans": true,
@@ -419,7 +419,7 @@
       "pure_getters": false,
       "pure_funcs": [],
       "drop_console": false,
-      "expression": false,
+      "expression": true,
       "keep_fargs": false,
       "keep_fnames": false,
       "passes": 1,
@@ -429,7 +429,7 @@
     },
     "output": {
       "ascii_only": false,
-      "beautify": false,
+      "beautify": true,
       "comments": "",
       "indent_level": 4,
       "indent_start": 0,
