--- a/prepros-6.config
+++ b/prepros-6.config
@@ -130,6 +130,14 @@
     {
       "path": "js/carousel.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"vendor/carousel.min.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+    },
+    {
+      "path": "sass/index.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"expanded\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-sass\":{\"libSass\":true,\"compass\":false,\"fullCompass\":false,\"outputStyle\":\"expanded\"}}"
+    },
+    {
+      "path": "js/work.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"js/work.bundle.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":false},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     }
   ],
   "fileTree": {
@@ -137,7 +145,8 @@
       "jade/include",
       "mobile/asset",
       "pug/include",
-      "js"
+      "js",
+      "sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -175,11 +184,20 @@
       ]
     },
     {
-      "path": "sass/self.scss",
+      "path": "sass/index.scss",
       "imports": [
         "css/slick.min.css",
         "css/slick-theme.min.css",
-        "css/jquery.fancybox.min.css"
+        "css/jquery.fancybox.min.css",
+        "sass/_vue.scss",
+        "sass/_wow.scss"
+      ]
+    },
+    {
+      "path": "sass/self.scss",
+      "imports": [
+        "sass/_vue.scss",
+        "sass/_wow.scss"
       ]
     },
     {
