--- a/prepros-6.config
+++ b/prepros-6.config
@@ -162,8 +162,6 @@
   },
   "imports": [
     {
-<<<<<<< HEAD
-<<<<<<< HEAD
       "path": "pug/index.pug",
       "imports": [
         "pug/include/layout.pug",
@@ -204,10 +202,6 @@
       ]
     },
     {
-=======
->>>>>>> 5f661d0eb90060afc001c44e0a20f09c7fc97b91
-=======
->>>>>>> 5f661d0eb90060afc001c44e0a20f09c7fc97b91
       "path": "sass/style.scss",
       "imports": [
         "sass/_reset.scss",
@@ -246,24 +240,24 @@
       ]
     },
     {
-      "path": "pug/index.pug",
+      "path": "sass/_map.scss",
       "imports": [
-        "pug/include/layout.pug",
-        "pug/include/mixin.pug",
+        "sass/_color.scss"
+      ]
+    },
+    {
+      "path": "sass/_menubox.scss",
+      "imports": [
+        "sass/_media.scss"
+      ]
+    },
+    {
+      "path": "pug/include/layout.pug",
+      "imports": [
         "pug/include/head.pug",
         "pug/include/trans.pug",
         "pug/include/bur.pug",
         "pug/include/menubox.pug"
-      ]
-    },
-    {
-      "path": "sass/index.scss",
-      "imports": [
-        "css/slick.min.css",
-        "css/slick-theme.min.css",
-        "css/jquery.fancybox.min.css",
-        "sass/_vue.scss",
-        "sass/_wow.scss"
       ]
     }
   ],
