updated wow and contact effects

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -144,9 +144,7 @@
     "expandedDirs": [
       "jade/include",
       "mobile/asset",
-      "pug/include",
-      "js",
-      "sass"
+      "pug/include"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -262,7 +260,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
