--- a/prepros-6.config
+++ b/prepros-6.config
@@ -144,7 +144,8 @@
     "expandedDirs": [
       "jade/include",
       "mobile/asset",
-      "pug/include"
+      "pug/include",
+      "sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -159,6 +160,46 @@
     "hideUnwatchedFiles": false
   },
   "imports": [
+    {
+      "path": "pug/index.pug",
+      "imports": [
+        "pug/include/layout.pug",
+        "pug/include/mixin.pug",
+        "pug/include/head.pug",
+        "pug/include/trans.pug",
+        "pug/include/bur.pug",
+        "pug/include/menubox.pug"
+      ]
+    },
+    {
+      "path": "pug/work.pug",
+      "imports": [
+        "pug/include/layout.pug",
+        "pug/include/mixin.pug",
+        "pug/include/head.pug",
+        "pug/include/trans.pug",
+        "pug/include/bur.pug",
+        "pug/include/menubox.pug"
+      ]
+    },
+    {
+      "path": "sass/index.scss",
+      "imports": [
+        "css/slick.min.css",
+        "css/slick-theme.min.css",
+        "css/jquery.fancybox.min.css",
+        "sass/_vue.scss",
+        "sass/_wow.scss"
+      ]
+    },
+    {
+      "path": "sass/self.scss",
+      "imports": [
+        "css/jquery.fancybox.min.css",
+        "sass/_vue.scss",
+        "sass/_wow.scss"
+      ]
+    },
     {
       "path": "sass/style.scss",
       "imports": [
@@ -198,24 +239,24 @@
       ]
     },
     {
-      "path": "pug/index.pug",
+      "path": "sass/_map.scss",
       "imports": [
-        "pug/include/layout.pug",
-        "pug/include/mixin.pug",
+        "sass/_color.scss"
+      ]
+    },
+    {
+      "path": "sass/_menubox.scss",
+      "imports": [
+        "sass/_media.scss"
+      ]
+    },
+    {
+      "path": "pug/include/layout.pug",
+      "imports": [
         "pug/include/head.pug",
         "pug/include/trans.pug",
         "pug/include/bur.pug",
         "pug/include/menubox.pug"
-      ]
-    },
-    {
-      "path": "sass/index.scss",
-      "imports": [
-        "css/slick.min.css",
-        "css/slick-theme.min.css",
-        "css/jquery.fancybox.min.css",
-        "sass/_vue.scss",
-        "sass/_wow.scss"
       ]
     }
   ],
