--- a/prepros-6.config
+++ b/prepros-6.config
@@ -161,46 +161,6 @@
   },
   "imports": [
     {
-      "path": "pug/index.pug",
-      "imports": [
-        "pug/include/layout.pug",
-        "pug/include/mixin.pug",
-        "pug/include/head.pug",
-        "pug/include/trans.pug",
-        "pug/include/bur.pug",
-        "pug/include/menubox.pug"
-      ]
-    },
-    {
-      "path": "pug/work.pug",
-      "imports": [
-        "pug/include/layout.pug",
-        "pug/include/mixin.pug",
-        "pug/include/head.pug",
-        "pug/include/trans.pug",
-        "pug/include/bur.pug",
-        "pug/include/menubox.pug"
-      ]
-    },
-    {
-      "path": "sass/index.scss",
-      "imports": [
-        "css/slick.min.css",
-        "css/slick-theme.min.css",
-        "css/jquery.fancybox.min.css",
-        "sass/_vue.scss",
-        "sass/_wow.scss"
-      ]
-    },
-    {
-      "path": "sass/self.scss",
-      "imports": [
-        "css/jquery.fancybox.min.css",
-        "sass/_vue.scss",
-        "sass/_wow.scss"
-      ]
-    },
-    {
       "path": "sass/style.scss",
       "imports": [
         "sass/_reset.scss",
@@ -235,28 +195,29 @@
         "sass/_contact.scss",
         "sass/_map.scss",
         "sass/_work.scss",
-        "sass/_android.scss"
+        "sass/_android.scss",
+        "sass/_slide.scss"
       ]
     },
     {
-      "path": "sass/_map.scss",
+      "path": "pug/index.pug",
       "imports": [
-        "sass/_color.scss"
-      ]
-    },
-    {
-      "path": "sass/_menubox.scss",
-      "imports": [
-        "sass/_media.scss"
-      ]
-    },
-    {
-      "path": "pug/include/layout.pug",
-      "imports": [
+        "pug/include/layout.pug",
+        "pug/include/mixin.pug",
         "pug/include/head.pug",
         "pug/include/trans.pug",
         "pug/include/bur.pug",
         "pug/include/menubox.pug"
+      ]
+    },
+    {
+      "path": "sass/index.scss",
+      "imports": [
+        "css/slick.min.css",
+        "css/slick-theme.min.css",
+        "css/jquery.fancybox.min.css",
+        "sass/_vue.scss",
+        "sass/_wow.scss"
       ]
     }
   ],
