0213 edit by lichee

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -145,7 +145,7 @@
       "jade/include",
       "mobile/asset",
       "pug/include",
-      "sass"
+      "pug"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
