--- a/prepros-6.config
+++ b/prepros-6.config
@@ -138,6 +138,14 @@
     {
       "path": "js/work.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"js/work.bundle.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":false},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+    },
+    {
+      "path": "js/kcSlide.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"vendor/kcSlide.min.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":false},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":false},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+    },
+    {
+      "path": "js/kvSlide.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"vendor/kvSlide.min.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     }
   ],
   "fileTree": {
@@ -145,7 +153,7 @@
       "jade/include",
       "mobile/asset",
       "pug/include",
-      "pug"
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -160,6 +168,46 @@
     "hideUnwatchedFiles": false
   },
   "imports": [
+    {
+      "path": "pug/index.pug",
+      "imports": [
+        "pug/include/layout.pug",
+        "pug/include/mixin.pug",
+        "pug/include/head.pug",
+        "pug/include/trans.pug",
+        "pug/include/bur.pug",
+        "pug/include/menubox.pug"
+      ]
+    },
+    {
+      "path": "pug/work.pug",
+      "imports": [
+        "pug/include/layout.pug",
+        "pug/include/mixin.pug",
+        "pug/include/head.pug",
+        "pug/include/trans.pug",
+        "pug/include/bur.pug",
+        "pug/include/menubox.pug"
+      ]
+    },
+    {
+      "path": "sass/index.scss",
+      "imports": [
+        "css/slick.min.css",
+        "css/slick-theme.min.css",
+        "css/jquery.fancybox.min.css",
+        "sass/_vue.scss",
+        "sass/_wow.scss"
+      ]
+    },
+    {
+      "path": "sass/self.scss",
+      "imports": [
+        "css/jquery.fancybox.min.css",
+        "sass/_vue.scss",
+        "sass/_wow.scss"
+      ]
+    },
     {
       "path": "sass/style.scss",
       "imports": [
@@ -200,24 +248,24 @@
       ]
     },
     {
-      "path": "pug/index.pug",
+      "path": "sass/_map.scss",
       "imports": [
-        "pug/include/layout.pug",
-        "pug/include/mixin.pug",
+        "sass/_color.scss"
+      ]
+    },
+    {
+      "path": "sass/_menubox.scss",
+      "imports": [
+        "sass/_media.scss"
+      ]
+    },
+    {
+      "path": "pug/include/layout.pug",
+      "imports": [
         "pug/include/head.pug",
         "pug/include/trans.pug",
         "pug/include/bur.pug",
         "pug/include/menubox.pug"
-      ]
-    },
-    {
-      "path": "sass/index.scss",
-      "imports": [
-        "css/slick.min.css",
-        "css/slick-theme.min.css",
-        "css/jquery.fancybox.min.css",
-        "sass/_vue.scss",
-        "sass/_wow.scss"
       ]
     }
   ],
