--- a/prepros-6.config
+++ b/prepros-6.config
@@ -153,7 +153,7 @@
       "jade/include",
       "mobile/asset",
       "pug/include",
-      "js"
+      "sass"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
